--- a/src/App.css
+++ b/src/App.css
@@ -99,11 +99,12 @@ button:hover {
 }
 
 .error-input {
-  border: 2px solid red;
+  border: 2px solid red !important;
 }
 
 .error-message {
   color: red;
   font-size: 0.8em;
 }
+
 
